# personal-ai-agent

./: .gitignore  README.md  config.yaml  gcp1stagentcode.ipynb  loadenv.ipynb  main.py  pyproject.toml  requirements.txt
agents/: executor.py  memory.py  planner.py
graph/: agent_graph.py
tools/: git_tools.py  shell_tools.py
