[project]
name = "personal-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.6",
    "openai>=2.15.0",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
]
